# kombyne

./: .gitignore  .gitmodules  COPYING  Makefile.am  README  README.md  bootstrap  configure.ac  update_submodules.sh
m4/: package.m4  pancake.m4
pancake/include/: Makefile.am  tinf_6dof.h  tinf_6dof.inc  tinf_device.h  tinf_distance_calculator.h  tinf_distance_calculator.inc  tinf_distance_to_boundary.h  tinf_distance_to_boundary.inc  tinf_domain_assembler.h  tinf_enum_definitions.h  tinf_enum_definitions.inc  tinf_geom.h  tinf_geom.inc  tinf_input_file.h  tinf_input_file.inc  tinf_iris.h  tinf_iris.inc  tinf_kernel.h  tinf_kernel.inc  tinf_mesh.h  tinf_mesh.inc  tinf_mesh_boundary.h  tinf_mesh_boundary.inc  tinf_mesh_filter.h  tinf_mesh_filter.inc  tinf_mesh_transform.h  tinf_mesh_transform.inc  tinf_nc_utility.h  tinf_nc_utility.inc  tinf_preprocessor.h  tinf_preprocessor.inc  tinf_problem.h  tinf_problem.inc  tinf_solution.h  tinf_solution.inc  tinf_solver.h  tinf_solver.inc  tinf_solver_sensitivities.h  tinf_solver_sensitivities.inc  tinf_visualizer.h  (+1 more)
pancake/include/linear_algebra/: Makefile.am  tinf_linear_algebra.h  tinf_linear_algebra.inc  tinf_linear_solver.h  tinf_linear_solver.inc  tinf_linear_solver_constants.h  tinf_linear_solver_constants.inc  tinf_preconditioning.h  tinf_preconditioning.inc  tinf_reordering.h  tinf_reordering.inc
pancake/include/pancake_cxx/: DLL.h  ExecutionTimer.h  Makefile.am  Mutex.h  Problem.h  TinfStatus.h  TinfStream.h  iris_overloads.h  tinf_type.h
src/: Kombyne.cpp  Kombyne.h  Kombyne.yaml  Makefile.am  UMesh.cpp  UMesh.h  tinf_visualizer.cpp
