SUBDIRS = \
	linear_algebra \
	pancake_cxx

include_HEADERS = \
	tinf_6dof.h \
	tinf_6dof.inc \
	tinf_device.h \
	tinf_distance_calculator.h \
	tinf_distance_calculator.inc \
	tinf_distance_to_boundary.h \
	tinf_distance_to_boundary.inc \
	tinf_domain_assembler.h \
	tinf_enum_definitions.h \
	tinf_enum_definitions.inc \
	tinf_geom.h \
	tinf_geom.inc \
	tinf_input_file.h \
	tinf_input_file.inc \
	tinf_iris.h \
	tinf_iris.inc \
	tinf_kernel.h \
	tinf_kernel.inc \
	tinf_mesh.h \
	tinf_mesh.inc \
	tinf_mesh_boundary.h \
	tinf_mesh_boundary.inc \
	tinf_mesh_filter.h \
	tinf_mesh_filter.inc \
	tinf_mesh_transform.h \
	tinf_mesh_transform.inc \
	tinf_nc_utility.h \
	tinf_nc_utility.inc \
	tinf_preprocessor.h \
	tinf_preprocessor.inc \
	tinf_problem.h \
	tinf_problem.inc \
	tinf_solution.h \
	tinf_solution.inc \
	tinf_solver.h \
	tinf_solver.inc \
	tinf_solver_sensitivities.h \
	tinf_solver_sensitivities.inc \
	tinf_visualizer.h \
	tinf_visualizer.inc

CLEANFILES = tinf*.h tinf*.inc
