linear_algebradir = @includedir@/linear_algebra
linear_algebra_HEADERS = \
	tinf_linear_algebra.h \
	tinf_linear_solver.h \
	tinf_linear_solver_constants.h \
	tinf_preconditioning.h \
	tinf_reordering.h \
	tinf_linear_algebra.inc \
	tinf_linear_solver.inc \
	tinf_linear_solver_constants.inc \
	tinf_preconditioning.inc \
	tinf_reordering.inc
